# actions

./: .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  ai-pr-review-example.yml  ai-review-composite-example.yml  ai-review-reusable-example.yml  cancel-ai-review-example.yml  pyproject.toml
.claude/: ox-hooks.json  settings.json
.github/: release.yml  zizmor.yml
.github/workflows/: ai-pr-review.yml  ai-review.yml  cancel-self-review.yml  lint-workflows.yml  release.yml  self-review.yml
ai-review/: README.md  action.yml
ai-review/templates/: review-prompt.md
cancel-ai-review/: README.md  action.yml
gh/: README.md  ai-pr-review-example.yml
scripts/: banner.sh
