[project]
name = "actions"
version = "0.0.0"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "actionlint-py>=1.7.10.24",
    "pre-commit>=4.5.1",
    "yamlfix>=1.19.1",
    "zizmor>=1.22.0",
]

[tool.yamlfix]
explicit_start = false
section_whitelines = 1
whitelines = 1
line_length = 999
